# distributed-practice

./: basics_ray_core.ipynb  pyproject.toml
ray/: TaxiZones.csv  map_reduce.ipynb
spark/: rdd_pair_rdd.ipynb
spark/.ipynb_checkpoints/: rdd_pair_rdd-checkpoint.ipynb
