[tool.poetry]
name = "ray-examples"
version = "0.1.0"
description = "Some examples from book"
authors = ["Andres Ladino <aladinoster@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = "^3.10"
ray = "^2.37.0"
jupyterlab = "^4.2.5"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
